--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,23 @@ apache-airflow-providers-imap==3.5.0
 apache-airflow-providers-smtp==1.6.1
 apache-airflow-providers-sqlite==3.7.1
 apispec==6.6.0
+appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
 argcomplete==3.2.3
+argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1692818318753/work
+argon2-cffi-bindings @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi-bindings_1725356584769/work
+arrow @ file:///home/conda/feedstock_root/build_artifacts/arrow_1696128962909/work
 asgiref==3.7.2
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+async-lru @ file:///home/conda/feedstock_root/build_artifacts/async-lru_1690563019058/work
 async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.14.0
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1705564648255/work
+bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1730286182742/work
 blinker==1.7.0
+Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1687884187023/work
+cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
 cachelib==0.9.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -25,17 +36,24 @@ click==8.1.7
 clickclick==20.10.2
 colorama==0.4.6
 colorlog==4.8.0
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
 ConfigUpdater==3.2
 connexion==2.14.2
 cron-descriptor==1.4.3
 croniter==2.0.3
 cryptography==41.0.7
+debugpy @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_30hp2nowkm/croot/debugpy_1690905056188/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
 Deprecated==1.2.14
 dill==0.3.1.1
 dnspython==2.6.1
 docutils==0.20.1
 email-validator==1.3.1
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
 exceptiongroup==1.2.0
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1718477020893/work/dist
 Flask==2.2.5
 Flask-AppBuilder==4.3.11
 Flask-Babel==2.0.0
@@ -46,6 +64,7 @@ Flask-Login==0.6.3
 Flask-Session==0.5.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.1
+fqdn @ file:///home/conda/feedstock_root/build_artifacts/fqdn_1638810296540/work/dist
 frozenlist==1.4.1
 fsspec==2024.3.1
 google-re2==1.1
@@ -53,17 +72,35 @@ googleapis-common-protos==1.63.0
 greenlet==3.0.3
 grpcio==1.62.1
 gunicorn==21.2.0
-h11==0.14.0
+h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1664132893548/work
+h2 @ file:///Users/runner/miniforge3/conda-bld/h2_1633502800642/work
+hpack==4.0.0
 httpcore==0.16.3
 httpx==0.23.3
-idna==3.6
+hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1619110129307/work
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1726459485162/work
 importlib-metadata==6.11.0
 importlib_resources==6.3.2
 inflection==0.5.1
+ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
+ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1680185563420/work
+isoduration @ file:///home/conda/feedstock_root/build_artifacts/isoduration_1638811571363/work/dist
 itsdangerous==2.1.2
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1731317204262/work
 Jinja2==3.1.3
+json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1731365966646/work
+jsonpointer @ file:///Users/runner/miniforge3/conda-bld/jsonpointer_1725302885897/work
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+jupyter-events @ file:///home/conda/feedstock_root/build_artifacts/jupyter_events_1710805637316/work
+jupyter-lsp @ file:///home/conda/feedstock_root/build_artifacts/jupyter-lsp-meta_1712707420468/work/jupyter-lsp
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+jupyter_server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1720816649297/work
+jupyter_server_terminals @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_terminals_1710262634903/work
+jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1731778660997/work
+jupyterlab_pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1707149102966/work
+jupyterlab_server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server-split_1721163288448/work
 lazy-object-proxy==1.10.0
 limits==3.10.1
 linkify-it-py==2.0.3
@@ -74,10 +111,18 @@ MarkupSafe==2.1.5
 marshmallow==3.21.1
 marshmallow-oneofschema==3.1.1
 marshmallow-sqlalchemy==0.26.1
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
+mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1698947099619/work
 more-itertools==10.2.0
 multidict==6.0.5
+nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1710317608672/work
+nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1718135430380/work
+nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1712238998817/work
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1724861303656/work
+notebook_shim @ file:///home/conda/feedstock_root/build_artifacts/notebook-shim_1707957777232/work
 numpy==2.0.2
 opentelemetry-api==1.23.0
 opentelemetry-exporter-otlp==1.23.0
@@ -88,49 +133,81 @@ opentelemetry-proto==1.23.0
 opentelemetry-sdk==1.23.0
 opentelemetry-semantic-conventions==0.44b0
 ordered-set==4.1.0
+overrides @ file:///home/conda/feedstock_root/build_artifacts/overrides_1706394519472/work
 packaging==24.0
 pandas==2.2.3
+pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
 pathspec==0.12.1
 pendulum==3.0.0
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1694617248815/work
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
 pluggy==1.4.0
 prison==0.2.1
+prometheus_client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1726901976720/work
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
 protobuf==4.25.3
 psutil==5.9.8
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
 pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
+pyobjc-core @ file:///Users/runner/miniforge3/conda-bld/pyobjc-core_1725739317265/work
+pyobjc-framework-Cocoa @ file:///Users/runner/miniforge3/conda-bld/pyobjc-framework-cocoa_1725875010622/work
+PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
 python-daemon==3.0.1
-python-dateutil==2.9.0.post0
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+python-json-logger @ file:///home/conda/feedstock_root/build_artifacts/python-json-logger_1677079630776/work
 python-nvd3==0.15.0
 python-slugify==8.0.4
 pytz==2024.1
 PyYAML==6.0.1
+pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1666828678061/work
 referencing==0.34.0
 requests==2.31.0
 requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
+rfc3339-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3339-validator_1638811747357/work
 rfc3986==1.5.0
+rfc3986-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3986-validator_1598024191506/work
 rich==13.7.1
 rich-argparse==1.4.0
 rpds-py==0.18.0
+Send2Trash @ file:///Users/runner/miniforge3/conda-bld/send2trash_1712585336584/work
 setproctitle==1.3.3
-six==1.16.0
-sniffio==1.3.1
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1708952932303/work
+soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1693929250441/work
 SQLAlchemy==1.4.52
 SQLAlchemy-JSONField==1.0.2
 SQLAlchemy-Utils==0.41.1
 sqlparse==0.4.4
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 tabulate==0.9.0
 tenacity==8.2.3
 termcolor==2.4.0
+terminado @ file:///Users/runner/miniforge3/conda-bld/terminado_1710263781917/work
 text-unidecode==1.3
 time-machine==2.14.0
+tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1729802851396/work
+tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1731426768275/work
+tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1724956112789/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+types-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/types-python-dateutil_1727940235703/work
+typing-utils @ file:///home/conda/feedstock_root/build_artifacts/typing_utils_1622899189314/work
 typing_extensions==4.10.0
 tzdata==2024.1
 uc-micro-py==1.0.3
 unicodecsv==0.14.1
 universal-pathlib==0.1.4
+uri-template @ file:///home/conda/feedstock_root/build_artifacts/uri-template_1688655812972/work/dist
 urllib3==1.26.18
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+webcolors @ file:///home/conda/feedstock_root/build_artifacts/webcolors_1723294704277/work
+webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1694681268211/work
+websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1713923384721/work
 Werkzeug==2.2.3
 wrapt==1.16.0
 WTForms==3.1.2
