--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
 alembic==1.13.1
+annotated-types==0.7.0
 anyio==4.3.0
 apache-airflow==2.8.4
 apache-airflow-providers-common-io==1.3.0
@@ -35,8 +36,9 @@ dill==0.3.1.1
 dnspython==2.6.1
 docopt==0.6.2
 docutils==0.20.1
-email-validator==1.3.1
+email_validator==2.2.0
 exceptiongroup==1.2.0
+fastapi==0.115.5
 Flask==2.2.5
 Flask-AppBuilder==4.3.11
 Flask-Babel==2.0.0
@@ -56,6 +58,7 @@ grpcio==1.62.1
 gunicorn==21.2.0
 hpack==4.0.0
 httpcore==0.16.3
+httptools==0.6.4
 httpx==0.23.3
 importlib-metadata==6.11.0
 importlib_resources==6.3.2
@@ -98,11 +101,15 @@ pluggy==1.4.0
 prison==0.2.1
 protobuf==4.25.3
 psutil==5.9.8
+psycopg2-binary==2.9.10
 pyarrow==18.0.0
 pycparser==2.21
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.17.2
 PyJWT==2.8.0
 python-daemon==3.0.1
+python-dotenv==1.0.1
 python-nvd3==0.15.0
 python-slugify==8.0.4
 pytz==2024.1
@@ -119,6 +126,7 @@ SQLAlchemy==1.4.52
 SQLAlchemy-JSONField==1.0.2
 SQLAlchemy-Utils==0.41.1
 sqlparse==0.4.4
+starlette==0.41.2
 tabulate==0.9.0
 tenacity==8.2.3
 termcolor==2.4.0
@@ -130,6 +138,10 @@ uc-micro-py==1.0.3
 unicodecsv==0.14.1
 universal-pathlib==0.1.4
 urllib3==1.26.18
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websockets==14.1
 Werkzeug==2.2.3
 wrapt==1.16.0
 WTForms==3.1.2
