--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ dill==0.3.1.1
 dnspython==2.6.1
 docopt==0.6.2
 docutils==0.20.1
-email_validator==2.2.0
+email_validator<2
 exceptiongroup==1.2.0
 fastapi==0.115.5
 Flask==2.2.5
