--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ hpack==4.0.0
 httpcore==0.16.3
 httptools==0.6.4
 httpx==0.23.3
+idna==3.6
 importlib-metadata==6.11.0
 importlib_resources==6.3.2
 inflection==0.5.1
@@ -109,6 +110,7 @@ pydantic_core==2.23.4
 Pygments==2.17.2
 PyJWT==2.8.0
 python-daemon==3.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-nvd3==0.15.0
 python-slugify==8.0.4
