--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.14.0
 blinker==1.7.0
+boto3==1.35.70
+botocore==1.35.70
 cachelib==0.9.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -67,6 +69,7 @@ inflection==0.5.1
 ipython==8.12.3
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jmespath==1.0.1
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 lazy-object-proxy==1.10.0
@@ -123,6 +126,7 @@ rfc3986==1.5.0
 rich==13.7.1
 rich-argparse==1.4.0
 rpds-py==0.18.0
+s3transfer==0.10.4
 setproctitle==1.3.3
 SQLAlchemy==1.4.52
 SQLAlchemy-JSONField==1.0.2
